--- a/client-side/src/pages/Home/Weather/weather.css
+++ b/client-side/src/pages/Home/Weather/weather.css
@@ -7,7 +7,7 @@
 /* Default styles for desktop */
 .main-container {
   width: 100%;
-  max-width: 100%;
+  /* max-width: 100%; */
   height: 500px;
   max-height: 500px;
   border-radius: 0px 5px;
@@ -17,10 +17,14 @@
   overflow: hidden;
 }
 
+video {
+  max-width: none;
+  height: auto;
+}
+
 .main-contain {
   position: absolute;
   content: "";
-
   inset: 5px;
   padding-top: 50px;
   z-index: 0;
@@ -37,9 +41,9 @@
 /* Media query for mobile devices (480px wide and below) */
 @media (max-width: 480px) {
   .login_form {
-    height: 200px;
+    height: 400px;
     /* Adjust the height for mobile devices */
-    background-size: cover;
+    /* background-size: cover; */
     /* Ensure the background image covers the container */
   }
 }
